# Genesis

./: .gitignore  GENESIS_MEMORY.md  README.md  config.example.toml  pyproject.toml  requirements.txt  setup.bat
.claude/: settings.local.json
docs/superpowers/specs/: 2026-07-12-claude-multi-account-design.md  (+1 more)
genesis/: __main__.py  _sqlite.py  account_usage.py  config.py  evidence.py  git_ops.py  main.py  memory.py  palace.py  policy.py  repl.py  runtime.py  scheduler.py  verifier.py  worktree.py
genesis/agents/: availability.py  base.py  chatgpt_browser.py  claude_agent.py  claude_cli.py  codex_cli.py  codex_worker.py  collaboration.py  gpt_agent.py  orchestrator.py  worker.py  worker_dialogue.py
genesis/chatroom/: __init__.py  bus.py  models.py  server.py  viewer.py
genesis/schemas/: plan.py  review.py
genesis/ui/: _preview.py  banner.py  console.py  dashboard.py  theme.py
tests/: test_acceptance_gates.py  test_account_usage.py  test_chatroom.py  test_claude_account_config.py  test_cli.py  test_codex_account_config.py  test_codex_reasoning.py  test_codex_sandbox.py  test_codex_worker_timeout.py  test_collaboration.py  test_config_defaults.py  test_evidence.py  test_failover.py  test_git_ops.py  test_memory_manager.py  test_memory_runtime_policy.py  test_orchestrator_roles.py  test_orchestrator_safety.py  test_palace_runtime_robustness.py  test_process_cleanup.py  test_roster_dedup.py  test_scheduler.py  test_ui_rendering.py  test_verifier_robustness.py  test_worker_dialogue.py  test_worker_filesystem.py  test_worktree_preconditions.py
