[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis"
version = "0.1.0"
description = "Terminal AI orchestration system — your personal AI software development firm"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7.0",
    "pydantic>=2.0.0",
    "gitpython>=3.1.40",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
genesis = "genesis.main:main"

[tool.setuptools.packages.find]
include = ["genesis*"]
