[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis"
version = "0.1.0"
description = "Terminal AI orchestration system — your personal AI software development firm"
requires-python = ">=3.10"
dependencies = [
    "rich==13.9.4",
    "pydantic==2.11.10",
    "gitpython==3.1.46",
    "tomli==2.2.1; python_version < '3.11'",
]

[project.scripts]
genesis = "genesis.main:main"

[tool.setuptools.packages.find]
include = ["genesis*"]
